--- a/src/control-panel/ControlPanel.css
+++ b/src/control-panel/ControlPanel.css
@@ -1,12 +1,29 @@
 #control-panel {
     background-color: #fff;
-    height: 25px;
     display: flex;
     align-items: center;
-    flex-direction: column;
     padding-top: 5px;
+    justify-content: center;
+    flex-direction: row;
+    height: 50px;
 }
 #format-actions {
     width: 200px;
     margin-right: 400px;
+    display: flex;
+}
+
+.format-action {
+
+}
+.thesaurus {
+    margin-left: 20px;
+    display: flex;
+}
+.thesaurus > * {
+    margin-left: 10px;
+}
+
+.active {
+    background-color: #9cb5ff;
 }
